samples/_failures_safe/1761284225_0929c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32041547.c: In function ‘main’:
./samples/SAFE/__tmp_32041547.c:161:12: error: missing terminating " character
  161 |     printf("State Machine initialized. Enter commands (s=start, p=process, v=validate, e=error
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_32041547.c:161:5: error: expected expression at end of input
  161 |     printf("State Machine initialized. Enter commands (s=start, p=process, v=validate, e=error
      |     ^~~~~~
./samples/SAFE/__tmp_32041547.c:161:5: error: expected declaration or statement at end of input
